feat: change with model binding router on transaction item
